[package]
name = "ris_engine"
version = "0.1.0-dev"
authors = ["Rismosch"]
edition = "2021"
rust-version = "1.77"
description = "Barebones game engine. Home made passion project."
#documentation = "URL of the package documentation."
readme = "README.md"
homepage = "https://rismosch.com/"
repository = "https://github.com/Rismosch/ris_engine"
license = "GPL-3.0"
keywords = []
categories = []
#build = "Path to the package build script."
publish = false
default-run = "ris_engine"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "crates/ris_asset",
    "crates/ris_asset_compiler",
    "crates/ris_core",
    "crates/ris_data",
    "crates/ris_error",
    "crates/ris_file",
    "crates/ris_input",
    "crates/ris_jobs",
    "crates/ris_log",
    "crates/ris_math",
    "crates/ris_rng",
    "crates/ris_util",
    "crates/ris_video",
]

[dependencies]
criterion = { version = "0.3", features = ["html_reports"] }

ash = "0.37.3"
chrono = "0.4"
imgui = "0.11.0"
png = "0.17.10"
sdl2 = "0.34.5"
sdl2-sys = "0.34.5"
shaderc = "0.8"

ris_asset = { path = "crates/ris_asset" }
ris_core = { path = "crates/ris_core" }
ris_data = { path = "crates/ris_data" }
ris_error = { path = "crates/ris_error" }
ris_file = { path = "crates/ris_file" }
ris_input = { path = "crates/ris_input" }
ris_jobs = { path = "crates/ris_jobs" }
ris_log = { path = "crates/ris_log" }
ris_math = { path = "crates/ris_math" }
ris_rng = { path = "crates/ris_rng" }
ris_util = { path = "crates/ris_util" }
ris_video = { path = "crates/ris_video" }

[profile.dev]
opt-level = 0
debug = true
#split-debuginfo = '...'  # Platform-specific.
strip = false
debug-assertions = true
overflow-checks = true
lto = false
panic = "unwind"
incremental = true
codegen-units = 256
rpath = false

[profile.release]
opt-level = 3
debug = false
#split-debuginfo = '...'  # Platform-specific.
strip = true
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
incremental = false
codegen-units = 1
rpath = false

[[bench]]
name = "map"
harness = false

[[bench]]
name = "sincos"
harness = false

[[bench]]
name = "math"
harness = false
