[package]
name = "ris_engine"
version = "0.1.0-dev"
authors = ["Rismosch"]
edition = "2024"
rust-version = "1.90"
description = "Barebones game engine. Home made passion project."
#documentation = "URL of the package documentation."
readme = "README.md"
homepage = "https://rismosch.com/"
repository = "https://github.com/Rismosch/ris_engine"
license = "MIT"
keywords = []
categories = []
#build = "Path to the package build script."
publish = false
default-run = "ris_engine"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [ 
    "crates/ris_asset",
    "crates/ris_async",
    "crates/ris_core",
    "crates/ris_data",
    "crates/ris_debug",
    "crates/ris_error",
    "crates/ris_gpu",
    "crates/ris_gpu_renderers",
    "crates/ris_input",
    "crates/ris_io",
    "crates/ris_log",
    "crates/ris_math",
    "crates/ris_ptr",
    "crates/ris_rng",
    "crates/ris_util",
]

[dependencies]
# internal
ris_asset = { path = "crates/ris_asset" }
ris_asset_data = { path = "crates/ris_asset_data" }
ris_async = { path = "crates/ris_async" }
ris_core = { path = "crates/ris_core" }
ris_data = { path = "crates/ris_data" }
ris_debug = { path = "crates/ris_debug" }
ris_error = { path = "crates/ris_error" }
ris_input = { path = "crates/ris_input" }
ris_io = { path = "crates/ris_io" }
ris_log = { path = "crates/ris_log" }
ris_math = { path = "crates/ris_math" }
ris_ptr = { path = "crates/ris_ptr" }
ris_rng = { path = "crates/ris_rng" }
ris_util = { path = "crates/ris_util" }
ris_gpu = { path = "crates/ris_gpu" }
ris_gpu_renderers = { path = "crates/ris_gpu_renderers" }

# external
ash = "0.37.3"
cfg-if = "1"
chrono = "0.4"
imgui = { version = "0.11.0", features = ["docking"] }
libc = "^0.2.30" # required for linux
miniz_oxide = "=0.8.2"
png = "0.17.10"
sdl2 = "0.38.0"
sdl2-sys = "0.38.0"
shaderc = "0.8"

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }

[features]
default = [
    "ris_cli_enabled",
    "ris_debug_enabled",
    "ris_logging_enabled",
    "ris_validation_enabled",
]

ris_cli_enabled = []

ris_debug_enabled = [
    "ris_core/ui_helper_enabled",
    "ris_debug/gizmos_enabled",
    "ris_debug/profiler_enabled",
    "ris_debug/store_sid_values",
]

ris_logging_enabled = [
    "ris_log/logging_enabled",
]

ris_validation_enabled = [
    "ris_ptr/validation_enabled",
]

ris_windows_subsystem = []

[profile.dev]
opt-level = 0
debug = true
#split-debuginfo = '...'  # Platform-specific.
strip = false
debug-assertions = true
overflow-checks = true
lto = false
panic = "unwind"
incremental = true
codegen-units = 256
rpath = false

[profile.release]
opt-level = 3
debug = false
#split-debuginfo = '...'  # Platform-specific.
strip = true
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
incremental = false
codegen-units = 1
rpath = false

[[bench]]
name = "async"
harness = false

[[bench]]
name = "map"
harness = false

[[bench]]
name = "math"
harness = false

[[bench]]
name = "sincos"
harness = false

[[bench]]
name = "vec"
harness = false
