[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = "0.34.5"
chrono = "0.4"
ris_asset = { path = "../crates/ris_asset" }
ris_core = { path = "../crates/ris_core" }
ris_error = { path = "../crates/ris_error" }
ris_file = { path = "../crates/ris_file" }
ris_log = { path = "../crates/ris_log" }
