[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = "0.34.5"
chrono = "0.4"
imgui = { version = "0.11.0", features = ["docking"] }
ris_asset = { path = "../crates/ris_asset" }
ris_core = { path = "../crates/ris_core" }
ris_data = { path = "../crates/ris_data" }
ris_error = { path = "../crates/ris_error" }
ris_io = { path = "../crates/ris_io" }
ris_log = { path = "../crates/ris_log" }

[features]
default = [
    "ris_log/logging_enabled",
]
