[package]
name = "ris_asset"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ris_data = { path = "../ris_data" }
ris_jobs = { path = "../ris_jobs" }
ris_log = { path = "../ris_log" }
ris_util = { path = "../ris_util" }
