[package]
name = "ris_asset"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
png = "0.17.10"
shaderc = "0.8"
ris_data = { path = "../ris_data" }
ris_error = { path = "../ris_error" }
ris_file = { path = "../ris_file" }
ris_jobs = { path = "../ris_jobs" }
ris_log = { path = "../ris_log" }
ris_util = { path = "../ris_util" }
