[package]
name = "ris_asset"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = "0.37.3"
miniz_oxide = "=0.8.2"
png = "0.17.10"
shaderc = "0.8"
ris_asset_data = { path = "../ris_asset_data" }
ris_async = { path = "../ris_async" }
ris_data = { path = "../ris_data" }
ris_error = { path = "../ris_error" }
ris_gpu = { path = "../ris_gpu" }
ris_io = { path = "../ris_io" }
ris_log = { path = "../ris_log" }
ris_math = { path = "../ris_math" }
ris_util = { path = "../ris_util" }
