[package]
name = "ris_asset_data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = "0.37.3"
ris_error = { path = "../ris_error" }
ris_io = { path = "../ris_io" }
ris_log = { path = "../ris_log" }
ris_math = { path = "../ris_math" }
ris_video_data = { path = "../ris_video_data" }
