[package]
name = "ris_async"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "1"
ris_error = { path = "../ris_error" }
ris_log = { path = "../ris_log" }

[target.'cfg(target_os = "linux")'.dependencies]
libc = "^0.2.30"

