[package]
name = "ris_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = "0.37.3"
chrono = "0.4"
sdl2 = "0.34.5"
sdl2-sys = "0.34.5"
imgui = { path = "../../third_party_bindings/imgui" }
ris_asset = { path = "../ris_asset" }
ris_data = { path = "../ris_data" }
ris_debug = { path = "../ris_debug" }
ris_error = { path = "../ris_error" }
ris_input = { path = "../ris_input" }
ris_io = { path = "../ris_io" }
ris_jobs = { path = "../ris_jobs" }
ris_log = { path = "../ris_log" }
ris_math = { path = "../ris_math" }
ris_ptr = { path = "../ris_ptr" }
ris_rng = { path = "../ris_rng" }
ris_util = { path = "../ris_util" }
ris_video_data = { path = "../ris_video_data" }
ris_video_renderers = { path = "../ris_video_renderers" }

[features]
ui_helper_enabled = []
