[package]
name = "ris_data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = "0.37.3"
sdl2 = "0.34.5"
chrono = "0.4"
ris_debug = { path = "../ris_debug" }
ris_error = { path = "../ris_error" }
ris_io = { path = "../ris_io" }
ris_jobs = { path = "../ris_jobs" }
ris_log = { path = "../ris_log" }
ris_math = { path = "../ris_math" }
ris_ptr = { path = "../ris_ptr" }
ris_util = { path = "../ris_util" }
ris_video_data = { path = "../ris_video_data" }
