[package]
name = "ris_debug"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
imgui = "0.11.0"
sdl2 = "0.34.5"
vulkano = "0.33.0"
shaderc = "0.8"
ris_data = { path = "../ris_data" }
ris_log = { path = "../ris_log" }
ris_video = { path = "../ris_video" }
