[package]
name = "ris_debug"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = "0.38.0"
chrono = "0.4"
ris_error = { path = "../ris_error" }
ris_log = { path = "../ris_log" }
ris_math = { path = "../ris_math" }

[features]
gizmos_enabled = []
profiler_enabled = []
store_sid_values = []
