[package]
name = "ris_jobs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ris_data = { path = "../ris_data" }
ris_log = { path = "../ris_log" }
ris_os = { path = "../ris_os" }
ris_util = { path = "../ris_util" }