[package]
name = "ris_video"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = "0.34.5"
sdl2-sys = "0.34.5"
vulkano = "0.33.0"
shaderc = "0.8"
ris_data = { path = "../ris_data" }
ris_jobs = { path = "../ris_jobs" }
ris_log = { path = "../ris_log" }
ris_math = { path = "../ris_math" }
