[package]
name = "ris_video_data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = "0.37.3"
imgui = "0.11.0"
sdl2 = "0.34.5"
sdl2-sys = "0.34.5"
shaderc = "0.8"
ris_error = { path = "../ris_error" }
ris_log = { path = "../ris_log" }
