[package]
name = "ris_video_renderers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = "0.37.3"
imgui = "0.11.0"
sdl2 = "0.38.0"
sdl2-sys = "0.38.0"
shaderc = "0.8"
ris_asset = { path = "../ris_asset" }
ris_asset_data = { path = "../ris_asset_data" }
ris_async = { path = "../ris_async" }
ris_data = { path = "../ris_data" }
ris_debug = { path = "../ris_debug" }
ris_error = { path = "../ris_error" }
ris_io = { path = "../ris_io" }
ris_log = { path = "../ris_log" }
ris_math = { path = "../ris_math" }
ris_util = { path = "../ris_util" }
ris_video_data = { path = "../ris_video_data" }
